@@ -1,3 +1,6 @@
+MG-2008-11-06-0: Enhancem.:  - SI usecase can now run in run level week
+                 Review:     RH
+
 MD-2008-11-05-0: Bugfix:     - fixed upgrade test
                  Review:     JG
 
